# bidirectional-pathtracer

./: .gitignore  .gitmodules  LICENSE  README.md
pathtracer/: CMakeLists.txt
pathtracer/objs/: bottle.mtl  bottle_separated.mtl  cakeisalie.mtl  cakeonly.mtl  cornell2.mtl  cornell3.mtl  cornell4.mtl  cornell_dragon.mtl  cube.mtl  football.mtl  monkey.mtl  pokeball.mtl  red_ball.mtl  rgb_mirror_scene.mtl  tiny_house.mtl
pathtracer/saves/: cornel.json  rgb_unicolor.json  saveBottle.json  tiny_house.json
pathtracer/src/: Simple.cc  Simple.hh  main.cc
pathtracer/src/color/: Colors.cc  Colors.hh
pathtracer/src/datastruct/: SplitAxis.cc  SplitAxis.hh
pathtracer/src/datastruct/box/: BoundingBox.cc  BoundingBox.hh  BoundingBox.hxx
pathtracer/src/datastruct/fixed_size_vectors/: Constants.hh  Vector2D.cc  Vector2D.hxx  Vector3D.hh  Vector3D.hxx
pathtracer/src/datastruct/kdtree/: KDNode.cc  KDNode.hh  KDTree.cc  KDTree.hh
pathtracer/src/datastruct/materials/: AllMaterialContainer.cc  AllMaterialContainer.hh  AllMaterialContainer.hxx  Material.cc  Material.hh  RGBImage.cc  RGBImage.hh  RGBImage.hxx
pathtracer/src/datastruct/pathtrace_points/: CameraPoint.cc  CameraPoint.hh  LightPoint.cc  LightPoint.hh  PathtracePoint.cc  PathtracePoint.hh
pathtracer/src/datastruct/polygon/: Polygon.cc  Polygon.hh  Polygon.hxx  PolygonWithIntersection.cc  PolygonWithIntersection.hh
pathtracer/src/datastruct/polygon_dist/: PolygonDist.cc  PolygonDist.hh
pathtracer/src/datastruct/ray/: Ray.cc  Ray.hh
pathtracer/src/datastruct/scene/: Scene.cc  Scene.hh
pathtracer/src/executor/: Executor.cc  Executor.hh
pathtracer/src/factory/: SceneFactory.cc  SceneFactory.hh
pathtracer/src/factory/image/: ImageFactory.cc  ImageFactory.hh  ImageFactory.hxx  PathtraceImageFactory.cc  PathtraceImageFactory.hh  PhongImageFactory.cc  PhongImageFactory.hh
pathtracer/src/factory/scene/: SceneFactory.cc  SceneFactory.hh
pathtracer/src/maths/: Matrix.hh  Matrix.hxx
pathtracer/src/parser/: AllPolygonContainer.cc  AllPolygonContainer.hh  AllPolygonContainer.hxx  CliParser.cc  CliParser.hh  ObjectFileParser.cc  ObjectFileParser.hh  Parser.cc  Parser.hh  SaveManager.cc  SaveManager.hh
pathtracer/src/scene_elements/: Camera.cc  Camera.hh  LuminanceInPoint.cc  LuminanceInPoint.hh  Obervers.cc  Obervers.hh  Polygon.cc  Polygon.hh  Ray.cc  Ray.hh  luminanceInPoint.hh  obervers.cc  obervers.hh  objects3d.cc  objects3d.hh  objects_3d.cc
pathtracer/src/scene_elements/fixed_size_vectors/: Constants.hh  Vector2D.hh  Vector2D.hxx  Vector3D.hh  Vector3D.hxx  vector2D.hh  vector2D.hxx  vector3D.cc  vector3D.hh  vector3D.hxx
pathtracer/src/scene_elements/lights/: AmbientLight.cc  AmbientLight.hh  DirectionalLight.cc  DirectionalLight.hh  Light.cc  Light.hh  PointLight.cc  PointLight.hh  SpotLight.cc  SpotLight.hh  ambientLight.cc  ambient_light.cc  ambient_light.hh  pointLight.cc  pointLight.hh  point_light.cc  point_light.hh
pathtracer/src/scene_elements/serialized/: SceneSave.cc  SceneSave.hh
pathtracer/src/scene_elements/serialized/camera/: Camera.cc  Camera.hh
pathtracer/src/scene_elements/serialized/lights/: AllLights.cc  AllLights.hh  AmbientLight.cc  AmbientLight.hh  DirectionalLight.cc  DirectionalLight.hh  Light.cc  Light.hh  PointLight.cc  PointLight.hh  SpotLight.cc  SpotLight.hh
pathtracer/src/tools/: DistanceFunctor.cc  DistanceFunctor.hh  DistancePolygonComparator.cc  DistancePolygonComparator.hh  RandomVals.cc  RandomVals.hh  RandomVals.hxx  Tools.cc  Tools.hh  Tools.hxx
pathtracer/src/tools/performances/: PerformancesHolder.cc  PerformancesHolder.hh  Stats.cc  Stats.hh
pathtracer_tests/: CMakeLists.txt  main.cc
pathtracer_tests/tests/: intersectionRayAABBTest.cc  serializeTest.cc  vector3dTest.cc
(+4 files in other folders)
